fix(companies): TW-197 header align fixed

--- a/src/elements/editor/style.module.scss
+++ b/src/elements/editor/style.module.scss
@@ -30,6 +30,7 @@
 .title {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   margin-right: 20px;
 }
 
